gccida/g0/loop_givs_reduce
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5024:1: error: use of undeclared identifier 'induction_1'
induction_1 *tv; // [rsp+20h] [rbp-30h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5024:14: error: use of undeclared identifier 'tv'
induction_1 *tv; // [rsp+20h] [rbp-30h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5025:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+28h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5025:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+28h] [rbp-28h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5027:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5027:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5027:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5027:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5029:21: error: use of undeclared identifier 'v'
if ( ( *( ( _BYTE *)v + 100) & 4) == 0 && !v->same ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5029:44: error: use of undeclared identifier 'v'
if ( ( *( ( _BYTE *)v + 100) & 4) == 0 && !v->same ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5031:7: error: use of undeclared identifier 'v'
if ( !v->new_reg ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5032:1: error: use of undeclared identifier 'v'
v->new_reg = gen_reg_rtx( v->mode); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5032:27: error: use of undeclared identifier 'v'
v->new_reg = gen_reg_rtx( v->mode); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5033:7: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5033:23: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5033:27: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5033:32: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5035:17: error: use of undeclared identifier 'tv'
insert_before = tv->insn; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/loop.c:5036:6: error: use of undeclared identifier 'tv'
if ( tv->mult_val == const_int_rtx[65] ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_reduce/src/obj/loop.o] Error 1
